--- a/index.html
+++ b/index.html
@@ -9,11 +9,24 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
     <style>
+    /* do-hyeon-regular - latin */
+    @font-face {
+      font-family: 'Do Hyeon';
+      font-style: normal;
+      font-weight: 400;
+      src: url('../fonts/do-hyeon-v11-latin-regular.eot'); /* IE9 Compat Modes */
+      src: local(''),
+           url('../fonts/do-hyeon-v11-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+           url('../fonts/do-hyeon-v11-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+           url('../fonts/do-hyeon-v11-latin-regular.woff') format('woff'), /* Modern Browsers */
+           url('../fonts/do-hyeon-v11-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+           url('../fonts/do-hyeon-v11-latin-regular.svg#DoHyeon') format('svg'); /* Legacy iOS */
+    }
     body {
       background: linear-gradient(135deg, #fe2929, #ffb3c5);
       background-color: #184e8e;
       padding: 80px;
-      font-family: 'Source Sans Pro', sans-serif
+      font-family: 'Do Hyeon', sans-serif
     }
     </style>
     <title>R9PUB :: MY BEER</title>
@@ -21,10 +34,10 @@
   <body>
     <div class="container hero">
           <div class="row">
-              <div class="col-12 col-lg-6 col-xl-5 offset-xl-1">
+              <div class="col-xl-5 offset-xl-1">
                 <h1>R9PUB에 들른 당신, 지급 생각나는 맥주는?</h1>
-                <a href="/1-a.html" class="btn btn-primary">익숙한 게 좋아~! 오늘도 시원한 라거 맥주</a>
-                <a href="/1-b.html" class="btn btn-primary">수제 맥주 전문 펍에 왔으니 에일 맥주로 고고!</a>
+                <a href="1-a.html" class="btn btn-lg btn-dark" style="display:inline-block; margin-bottom:5px">익숙한 게 좋아~! 오늘도 시원한 라거 맥주</a>
+                <a href="1-b.html" class="btn btn-lg btn-light" style="display:inline-block;">수제 맥주 전문 펍에 왔으니 에일 맥주로 고고!</a>
               </div>
           </div>
       </div>
