--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
       font-family: 'Do Hyeon';
       font-style: normal;
       font-weight: 400;
-      src: url('../fonts/do-hyeon-v11-latin-regular.eot'); /* IE9 Compat Modes */
+      src: url('fonts/do-hyeon-v11-latin-regular.eot'); /* IE9 Compat Modes */
       src: local(''),
-           url('../fonts/do-hyeon-v11-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-           url('../fonts/do-hyeon-v11-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-           url('../fonts/do-hyeon-v11-latin-regular.woff') format('woff'), /* Modern Browsers */
-           url('../fonts/do-hyeon-v11-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-           url('../fonts/do-hyeon-v11-latin-regular.svg#DoHyeon') format('svg'); /* Legacy iOS */
+           url('fonts/do-hyeon-v11-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+           url('fonts/do-hyeon-v11-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+           url('fonts/do-hyeon-v11-latin-regular.woff') format('woff'), /* Modern Browsers */
+           url('fonts/do-hyeon-v11-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+           url('fonts/do-hyeon-v11-latin-regular.svg#DoHyeon') format('svg'); /* Legacy iOS */
     }
     body {
       background: linear-gradient(135deg, #fe2929, #ffb3c5);
