--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       background: linear-gradient(135deg, #fe2929, #ffb3c5);
       background-color: #184e8e;
       padding: 80px;
-      font-family: 'Do Hyeon', sans-serif
+      font-family: 'Do Hyeon'
     }
     </style>
     <title>R9PUB :: MY BEER</title>
