--- a/index.html
+++ b/index.html
@@ -7,25 +7,25 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css">
     <style>
-    /* do-hyeon-regular - latin */
+    /* do-hyeon-regular - korean */
     @font-face {
       font-family: 'Do Hyeon';
       font-style: normal;
       font-weight: 400;
-      src: url('fonts/do-hyeon-v11-latin-regular.eot'); /* IE9 Compat Modes */
+      src: url('fonts/do-hyeon-v11-korean-regular.eot'); /* IE9 Compat Modes */
       src: local(''),
-           url('fonts/do-hyeon-v11-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-           url('fonts/do-hyeon-v11-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-           url('fonts/do-hyeon-v11-latin-regular.woff') format('woff'), /* Modern Browsers */
-           url('fonts/do-hyeon-v11-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-           url('fonts/do-hyeon-v11-latin-regular.svg#DoHyeon') format('svg'); /* Legacy iOS */
+           url('fonts/do-hyeon-v11-korean-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+           url('fonts/do-hyeon-v11-korean-regular.woff2') format('woff2'), /* Super Modern Browsers */
+           url('fonts/do-hyeon-v11-korean-regular.woff') format('woff'), /* Modern Browsers */
+           url('fonts/do-hyeon-v11-korean-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+           url('fonts/do-hyeon-v11-korean-regular.svg#DoHyeon') format('svg'); /* Legacy iOS */
     }
     body {
       background: linear-gradient(135deg, #fe2929, #ffb3c5);
       background-color: #184e8e;
       padding: 20px;
+      height: 100%;
       font-family: 'Do Hyeon'
     }
     </style>
