--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
     body {
       background: linear-gradient(135deg, #fe2929, #ffb3c5);
       background-color: #184e8e;
-      padding: 20px;
-      height: 100%;
+      padding: 40px 20px 300px 20px;
       font-family: 'Do Hyeon'
     }
     </style>
