--- a/1-a.html
+++ b/1-a.html
@@ -7,30 +7,10 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
-    <style>
-    /* do-hyeon-regular - korean */
-    @font-face {
-      font-family: 'Do Hyeon';
-      font-style: normal;
-      font-weight: 400;
-      src: url('fonts/do-hyeon-v11-korean-regular.eot'); /* IE9 Compat Modes */
-      src: local(''),
-           url('fonts/do-hyeon-v11-korean-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-           url('fonts/do-hyeon-v11-korean-regular.woff2') format('woff2'), /* Super Modern Browsers */
-           url('fonts/do-hyeon-v11-korean-regular.woff') format('woff'), /* Modern Browsers */
-           url('fonts/do-hyeon-v11-korean-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-           url('fonts/do-hyeon-v11-korean-regular.svg#DoHyeon') format('svg'); /* Legacy iOS */
-    }
-    body {
-      background: linear-gradient(135deg, #fe2929, #ffb3c5);
-      background-color: #184e8e;
-      padding: 40px 20px 300px 20px;
-      font-family: 'Do Hyeon'
-    }
-    </style>
+    <link href="main.css" rel="stylesheet" />
     <title>R9PUB :: MY BEER</title>
   </head>
-  <body>
+  <body class="vh-100">
     <div class="container hero">
           <div class="row">
               <div class="col-xl-5 offset-xl-1">
