--- a/1-b-a.html
+++ b/1-b-a.html
@@ -18,7 +18,7 @@
                 <a href="1-b-a-a.html" class="btn btn-lg btn-dark" style="display:inline-block; margin-bottom:5px">가볍지만 엣지 있는 약간의 쌉쌀함, 시원한 목 넘김</a>
                 <a href="1-b-a-b.html" class="btn btn-lg btn-light" style="display:inline-block;; margin-bottom:5px">담백하고 깔끔한 맛</a>
                 <a href="1-b-a-c.html" class="btn btn-lg btn-info" style="display:inline-block;; margin-bottom:5px">부드러운, 편안한 목 넘김</a>
-                <a href="/mybeer" class="btn btn-lg btn-secondary" style="display:inline-block;; margin-bottom:5px">다시 골라볼까?</a>
+                <a href="1-b.html" class="btn btn-lg btn-secondary" style="display:inline-block;; margin-bottom:5px">다시 골라볼까?</a>
               </div>
           </div>
       </div>
