--- a/1-a-a.html
+++ b/1-a-a.html
@@ -14,9 +14,8 @@
     <div class="container hero">
           <div class="row">
               <div class="col-xl-5 offset-xl-1">
-                <h1>가벼운 에일들 중 내가 원하는 맥주는?</h1>
                 <ul class="list-group list-group-flush">
-                  <li class="list-group-item fs-1 text-light">고소하고 달콤한 <strong>청담동 며느리</strong></li>
+                  <li class="list-group-item fs-1 text-light bg-transparent">고소하고 달콤한 <strong>청담동 며느리</strong></li>
                 </ul>
                 <a href="/mybeer" class="btn btn-lg btn-secondary" style="display:inline-block;; margin-bottom:5px">다시 골라볼까?</a>
               </div>
