--- a/1-a.html
+++ b/1-a.html
@@ -16,7 +16,7 @@
               <div class="col-xl-5 offset-xl-1">
                 <h1>라거라고 다 같은 라거가 아니지. 지금 당신이 원하는 라거는?</h1>
                 <a href="1-a-a.html" class="btn btn-lg btn-dark" style="display:inline-block; margin-bottom:5px">구수하고 진한 스타일의 라거</a>
-                <a href="1-b.html" class="btn btn-lg btn-light" style="display:inline-block;; margin-bottom:5px">가볍고 청량한 스타일의 라거</a>
+                <a href="1-a-b.html" class="btn btn-lg btn-light" style="display:inline-block;; margin-bottom:5px">가볍고 청량한 스타일의 라거</a>
                 <a href="/mybeer" class="btn btn-lg btn-secondary" style="display:inline-block;; margin-bottom:5px">다시 골라볼까?</a>
               </div>
           </div>
