--- a/1-b.html
+++ b/1-b.html
@@ -15,8 +15,8 @@
           <div class="row">
               <div class="col-xl-5 offset-xl-1">
                 <h1>다양한 에일 맥주들 중 당신은?</h1>
-                <a href="1-b-a.html" class="btn btn-lg btn-dark" style="display:inline-block; margin-bottom:5px">가벼운 맛을 원해요</a>
-                <a href="1-b-b.html" class="btn btn-lg btn-light" style="display:inline-block;; margin-bottom:5px">깊은 맛을 원해요</a>
+                <a href="1-b-a.html" class="btn btn-lg btn-dark" style="display:inline-block; margin-bottom:5px">가벼운 맛이 좋아</a>
+                <a href="1-b-b.html" class="btn btn-lg btn-light" style="display:inline-block;; margin-bottom:5px">깊은 맛이 좋아</a>
                 <a href="/mybeer" class="btn btn-lg btn-secondary" style="display:inline-block;; margin-bottom:5px">다시 골라볼까?</a>
               </div>
           </div>
