--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
               <div class="col-xl-5 offset-xl-1">
                 <h1>R9PUB에 들른 당신, 지금 생각나는 맥주는?</h1>
                 <a href="1-a.html" class="btn btn-lg btn-dark" style="display:inline-block; margin-bottom:5px">익숙한 게 좋아~! 오늘도 시원한 라거 맥주</a>
-                <a href="1-b.html" class="btn btn-lg btn-light" style="display:inline-block; margin-bottom:5px">수제 맥주 전문 펍에 왔으니 에일 맥주로 고고!</a>
+                <a href="1-b.html" class="btn btn-lg btn-dark" style="display:inline-block; margin-bottom:5px">수제 맥주 전문 펍에 왔으니 에일 맥주로 고고!</a>
               </div>
           </div>
       </div>
