--- a/1-b-b.html
+++ b/1-b-b.html
@@ -15,7 +15,7 @@
           <div class="row">
               <div class="col-xl-5 offset-xl-1">
                 <h1>깊은 맛의 에일들 중 내가 원하는 맥주는?</h1>
-                <a href="1-b-b-a.html" class="btn btn-lg btn-dark" style="display:inline-block; margin-bottom:5px">달콤함이 느껴지는 깊은 맛</a>
+                <a href="1-b-b-a.html" class="btn btn-lg btn-light" style="display:inline-block; margin-bottom:5px">달콤함이 느껴지는 깊은 맛</a>
                 <a href="1-b-b-b.html" class="btn btn-lg btn-light" style="display:inline-block;; margin-bottom:5px">술 좀 하는 프로들의, 도수가 느껴지는 맛</a>
                 <a href="1-b.html" class="btn btn-lg btn-secondary" style="display:inline-block;; margin-bottom:5px">다시 골라볼까?</a>
               </div>
