--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
     <link href="main.css" rel="stylesheet" />
-    <title>R9PUP :: MY BEER</title>
+    <title>R.9PUP :: MY BEER</title>
   </head>
   <body class="vh-100">
     <div class="container hero">
           <div class="row">
               <div class="col-xl-5 offset-xl-1">
-                <h1>R9PUP에 들른 당신, 지금 생각나는 맥주는?</h1>
+                <h1>R.9PUP에 들른 당신, 지금 생각나는 맥주는?</h1>
                 <a href="1-a.html" class="btn btn-lg btn-light" style="display:inline-block; margin-bottom:5px">익숙한 게 좋아~! 오늘도 시원한 라거 맥주</a>
                 <a href="1-b.html" class="btn btn-lg btn-light" style="display:inline-block; margin-bottom:5px">수제 맥주 전문 펍에 왔으니 에일 맥주로 고고!</a>
               </div>
